TODO IMPL: recalc bg always on bg colour change

TODO: document typical actions in rxvt.1.pod keysyms
TODO: warn with a graphical message when env has been modified
TODO: c&c perl socket via daemon-ext mechanism
TODO: simplify extension metainfo cache, cache on disk
TODO: URxvt::Ext::Name installs urxvt ext name and provides pod/manpage for URxvt::Ext::Name

	- do not start blinking cursor if the window is unfocused (reported by
	  Devin J. Pohly).
	- change the width of underline and i-beam cursor to 2 pixels (based on
	  a patch by Omar Sandoval).
	- a keysym resource for a key which is already bound to an
	  action now properly rebinds the key.
	- the key_press hook is now invoked before processing the
	  event, as documented. This change was done in 9.21 but not
	  announced and fixes debian bugs #511377, #531751 and red hat
	  bug #1105069. Note that this change breaks a few scripts,
	  such as mark-yank-urls, which rely on the previous buggy
	  behaviour that urxvt processes the event (in particular
	  keysym bindings) before invoking the hook.
	- the tabbed extension now properly refreshes the active tab
	  on a key press when the mouse pointer is outside the terminal
	  window.
	- add 'lookup_keysym' perl method to lookup the action bound
	  to a key combination.
	- a key combination bound to 'matcher:select' can now be used
	  to cycle through the matches in matcher.

9.21 Wed Dec 31 14:50:03 CET 2014
	- the "moa redraw 8-bit british vintage colour management" release.
	- NOTICE: this release updates terminfo.
	- fix pixel droppings on overdraw when a secondary core font has the
          same height but different ascent.
        - implement cvvis in terminfo as blinking cursor, to distinguish it
          from cnorm (emacs uses cvvis which is commonly a blinking cursor).
        - when xft support was compiled in, colour queries erroneously returned
          premultiplied values, this also affected internal queries, for example